--- a/fthofplannerv2/planner.html
+++ b/fthofplannerv2/planner.html
@@ -9,7 +9,7 @@
 <!-- Angular Material Library -->
 <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.8/angular-material.min.js"></script>
 
-<script src="http://orteil.dashnet.org/cookieclicker/base64.js"></script>	
+<script src="https://orteil.dashnet.org/cookieclicker/base64.js"></script>	
 <script src="index.js"></script>
 <link rel="stylesheet" type="text/css" href="index.css">
 <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.8/angular-material.min.css">
