--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
+<p>Click <a href="fthofplannerv2/planner.html">here</a> for my upgraded FtHoF planner.</p>
 </body>
 </html>
