Fix index link to match

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
-<p>Click <a href="fthofplannerv2/planner.html">here</a> for my upgraded FtHoF planner.</p>
+<p>Click <a href="fthofplannerv2/index.html">here</a> for my upgraded FtHoF planner.</p>
 </body>
 </html>
