Think this actually fixes favicon

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="shortcut icon" type="image/x-icon" href="fthofplannerv2/img/favicon.ico">
+<title>Test</title>
 </head>
 <body>
 <h1>Hello World</h1>
