Minor label improvements

--- a/fthofplannerv2/index.html
+++ b/fthofplannerv2/index.html
@@ -43,12 +43,12 @@
 		
 		<md-divider ></md-divider>
     
-    <label>How far to look ahead</label>
+    <label>Lookahead length</label>
     <input type="number" ng-model="lookahead" min=10 max=1000> 
     
     <md-divider ></md-divider>
 	
-    <label>Number of Buffs in Sequence</label>
+    <label>Combo Size</label>
     <input type="number" ng-model="buffs_in_sequence" min=1 max=16> 
 
     <label>Max Spread</label>
