--- a/fthofplannerv2/index.html
+++ b/fthofplannerv2/index.html
@@ -34,7 +34,7 @@
 		</md-input-container>
 		<md-button class="md-raised md-primary" ng-click="load_game()">Import Save</md-button>
 		</div>
-    <ul>
+    <ul ng-if="combos">
       <li ng-repeat="combo in combos">
         <b>{{$index + min_combo_length}}x Combo</b> 
         <ul ng-if="combo.shortest.idx == -1"><li>No combo of this length</li></ul>
@@ -45,12 +45,12 @@
         </ul> 
       </li>
     </ul>
-		<p>Force the Hand of Fate is not completely random, it is based on your game's seed (which changes after each ascension) and on the number of spells cast this game. This means that if you know the seed then you can predict the results for casting Force the Hand of Fate.</p>
-		<p>There are two main things that can affect the result of FtHoF, the current season and the golden cookie sound selector. If the season is Valentines or Easter the random seed will be increased once, if the golden cookie sound selector is on then the seed will also be increased. This means there are 3 possible results for each cast of FtHoF depending on the selected season or whether the golden cookie chime is on or both. Continuing to switch between seasons or turn the chime on and off will not affecting the results, they only affect the result at the time the spell is cast.</p>
-		<p>Dragonflight can also affect the results of casting FtHoF. If the buff is active (not just possible) when FtHoF is cast then Click Frenzy is not added to the pool of possible results. This can change the result even if the original result was not a Click Frenzy.</p>
-		<p>Another thing that after the result is how many golden cookies are already on the screen. Each one increases the chance of failure by 15%.
-		</p>Since the result of FtHoF is based on the number of spells cast, if the next FtHoF cookie is not the one you want, you can cast a different spell to skip this one. This can be useful if you are searching for a particular cookie or need to skip a wrath cookie.</p>
-		
+		<p>Based on the <a href="http://fthof-planner.s3-website.us-east-2.amazonaws.com/">original FtHoF planner</a>. Not sure who wrote it, but huge thanks whoever you are. Please <a href="mailto:chilling@gmail.com">contact me</a> if you're that person so I can give you proper credit.</p>
+    <p>This adds a few enhancements to the original planner. Basically it's designed to help you find FtHoF combos (Building Special and optionally Elder Frenzy) of any size as quickly as possible.</p>
+    <p>If you don't understand what this is at all, check out the original and ask around for help. I've got a short guide explaining the new options/features I added <a href="guide.html">here</a>.</p>
+    <p>If you have questions/feedback, you can <a href="mailto:chilling@gmail.com">email me</a>, or preferably contact me on Discord in the cookie clicker channel. I'm @skeezy.</p>
+    
+
 		<md-divider ></md-divider>
     
     <label>Lookahead length</label>
