--- a/fthofplannerv2/index.html
+++ b/fthofplannerv2/index.html
@@ -9,6 +9,16 @@
 <!-- Angular Material Library -->
 <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.8/angular-material.min.js"></script>
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-22166588-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-22166588-2');
+</script>
+
 <script src="https://orteil.dashnet.org/cookieclicker/base64.js"></script>	
 <script src="index.js"></script>
 <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
