Add GA to guide as well

--- a/guide.html
+++ b/guide.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-22166588-2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-22166588-2');
+  </script>
+
   <title>FtHoF Planner v2 user guide</title>
 </head>
 <body>
