Fixed redundant contact link

--- a/fthofplannerv2/index.html
+++ b/fthofplannerv2/index.html
@@ -55,7 +55,7 @@
         </ul> 
       </li>
     </ul>
-		<p>Based on the <a href="http://fthof-planner.s3-website.us-east-2.amazonaws.com/">original FtHoF planner</a>. Not sure who wrote it, but huge thanks whoever you are. Please <a href="mailto:chilling@gmail.com">contact me</a> if you're that person so I can give you proper credit.</p>
+		<p>Based on the <a href="http://fthof-planner.s3-website.us-east-2.amazonaws.com/">original FtHoF planner</a>. Not sure who wrote it, but huge thanks whoever you are. Please contact me if you're that person so I can give you proper credit.</p>
     <p>This adds a few enhancements to the original planner. Basically it's designed to help you find FtHoF combos (Building Special and optionally Elder Frenzy) of any size as quickly as possible.</p>
     <p>If you don't understand what this is at all, check out the original and ask around for help. I've got a short guide explaining the new options/features I added <a href="guide.html">here</a>.</p>
     <p>If you have questions/feedback, you can <a href="mailto:chilling@gmail.com">email me</a>, or preferably contact me on Discord in the cookie clicker channel. I'm @skeezy.</p>
