--- a/guide.html
+++ b/guide.html
@@ -40,7 +40,7 @@
 <li>Lookahead length: This is how many grimoire casts (rows) are loaded when you import (original had it hard-coded to 10).</li>
 <li>Spell counter column (the one on the left) now includes indices for both your spells casts this ascension, and total spells cast</li>
 <li>Building Specials and Elder Frenzies are highlighted yellow</li>
-<li>Rows skippable via Gambler's have their Gambler's spell highlighted green.</li>
+<li>Rows skippable via Gambler's have their Gambler's spell highlighted blue.</li>
 </ul>
 </body>
 </html>
