--- a/fthofplannerv2/index.html
+++ b/fthofplannerv2/index.html
@@ -49,9 +49,9 @@
         <b>{{$index + min_combo_length}}x Combo</b> 
         <ul ng-if="combo.shortest.idx == -1"><li>No combo of this length</li></ul>
         <ul ng-if="combo.shortest.idx != -1">
-          <li ng-if="combo.first.idx != -1"><a href="#{{combo.first.idx}}">Earliest:</a> Length {{combo.first.length}}; spread {{combo.first.length - ($index + min_combo_length)}}; starting at {{combo.first.idx+1}}</li>
+          <li ng-if="combo.first.idx != -1"><a href="#{{combo.first.idx}}">Earliest:</a> Length {{combo.first.length}}; spread {{combo.first.length - ($index + min_combo_length)}}; starting at <a href="#{{combo.first.idx}}">spell #{{combo.first.idx+1}}</a></li>
           <li ng-if="combo.first.idx == -1">No combo of this length with spread <= {{max_spread}}</li>
-          <li><a href="#{{combo.shortest.idx}}">Shortest:</a> Length {{combo.shortest.length}}; spread {{combo.shortest.length - ($index + min_combo_length)}}; starting at {{combo.shortest.idx+1}}</li>
+          <li><a href="#{{combo.shortest.idx}}">Shortest:</a> Length {{combo.shortest.length}}; spread {{combo.shortest.length - ($index + min_combo_length)}}; starting at <a href="#{{combo.shortest.idx}}">spell #{{combo.shortest.idx+1}}</a></li>
         </ul> 
       </li>
     </ul>
@@ -107,16 +107,16 @@
 			<div flex-gt-sm="15" flex>
 				<md-toolbar layout="row" class="md-hue-3">
 					<div class="md-toolbar-tools">
-						<h1>#</h1>
+						<h1>Spell #</h1>
 					</div>
 				</md-toolbar>
 				<md-content>
 					<md-list flex>
-						<md-subheader class="md-no-sticky">Relative to now (this ascension | all time)</md-subheader>
+						<md-subheader class="md-no-sticky">Relative to now (This ascension | All time)</md-subheader>
 						<md-list-item class="md-2-line" ng-repeat="cookie_list in cookies" ng-click="null">
 							<div class="md-list-item-text" layout="column">
                 <a name="{{$index}}"></a>
-								<h3>{{"+" + ($index+1) + " (" + (spellsCastThisAscension+$index+1) + " | " + (spellsCastTotal+$index+1) + ")"}}</h3>
+								<h3>{{($index+1) + " (" + (spellsCastThisAscension+$index+1) + " | " + (spellsCastTotal+$index+1) + ")"}}</h3>
 							</div>
 						</md-list-item>
 				</md-content>
