--- a/fthofplannerv2/index.html
+++ b/fthofplannerv2/index.html
@@ -58,7 +58,7 @@
 		<p>Based on the <a href="http://fthof-planner.s3-website.us-east-2.amazonaws.com/">original FtHoF planner</a>. Not sure who wrote it, but huge thanks whoever you are. Please contact me if you're that person so I can give you proper credit.</p>
     <p>This adds a few enhancements to the original planner. Basically it's designed to help you find FtHoF combos (Building Special and optionally Elder Frenzy) of any size as quickly as possible. <i>Note: Because this is focused on combos, this is mainly targeted at people who can do at least two FtHoF casts. You need 307 wizard towers to do so, or 321 to do it easily.</i></p>
     <p>If you don't understand what this is at all, check out the original and ask around for help. I've got a short guide explaining the new options/features I added <a href="guide.html">here</a>.</p>
-    <p>If you have questions/feedback, you can <a href="mailto:chilling@gmail.com">email me</a>, or preferably contact me on Discord in the cookie clicker channel. I'm @skeezy.</p>
+    <p>If you have questions/feedback, you can <a href="mailto:chilling@gmail.com">email me</a>, or preferably contact me in the #cookie-clicker channel on the <a href="https://discordapp.com/invite/r6hssr5">official Discord</a>. I'm @skeezy.</p>
     
 
 		<md-divider ></md-divider>
