--- a/fthofplannerv2/index.html
+++ b/fthofplannerv2/index.html
@@ -95,8 +95,8 @@
     <label>Golden Cookes on screen</label>
     <input type="number" ng-model="on_screen_cookies" min=0 max=10>     
     
-    <md-checkbox ng-model="dragonflight" aria-label="Dragon Flight Active">
-      Dragonflight Active
+    <md-checkbox ng-model="dragonflight" aria-label="Dragonflight Buff Active">
+      Dragonflight Buff Active
     </md-checkbox>    
     
 
