--- a/fthofplannerv2/index.html
+++ b/fthofplannerv2/index.html
@@ -92,7 +92,7 @@
     
  		<md-divider ></md-divider>
 
-    <label>Golden Cookes on screen</label>
+    <label>Golden Cookies on screen</label>
     <input type="number" ng-model="on_screen_cookies" min=0 max=10>     
     
     <md-checkbox ng-model="dragonflight" aria-label="Dragonflight Buff Active">
