Update text to reflect that I'm not actively maintaining the site

--- a/fthofplannerv2/index.html
+++ b/fthofplannerv2/index.html
@@ -55,6 +55,7 @@
         </ul> 
       </li>
     </ul>
+		<p><b>Note: As of December 2020 I've gotten some reports that this isn't working anymore.</b> I stopped updating this site in mid-2019, so it's possible that changes to the game since then have made this tool stop working. Anyone who wants to is free to update the code and set up their own version of the site; I can even give you commit access to this site if you don't want to set up your own. But I won't personally have the time to keep this up to date anymore.</p>
 		<p>Based on the <a href="http://fthof-planner.s3-website.us-east-2.amazonaws.com/">original FtHoF planner</a>, written by <a href="https://www.reddit.com/user/RebelKeithy">RebelKeithy</a>. Huge thanks to him for creating such a helpful tool.</p>
     <p>This adds a few enhancements to the original planner. Basically it's designed to help you find FtHoF combos (Building Special and optionally Elder Frenzy) of any size as quickly as possible. <i>Note: Because this is focused on combos, this is mainly targeted at people who can do at least two FtHoF casts. You need 307 wizard towers to do so, or 321 to do it easily.</i></p>
     <p>If you don't understand what this is at all, check out the original and ask around for help. I've got a short guide explaining the new options/features I added <a href="guide.html">here</a>.</p>
